adding process for unified jenkinsfile approach for frontend apps

--- a/frontends/Jenkinsfile
+++ b/frontends/Jenkinsfile
@@ -24,13 +24,13 @@ pipeline {
         timestamps()
     }
     environment {
-        MASTER_BRANCH="master"
-        MASTER_STABLE_BRANCH="master-stable"
-
         NODE_BASE_IMAGE="registry.access.redhat.com/ubi9/nodejs-18:1-53"
         CYPRESS_TEST_IMAGE="quay.io/cloudservices/cypress-e2e-image:06b70f3"
 
         CICD_URL="https://raw.githubusercontent.com/RedHatInsights/cicd-tools/main"
+
+        IMAGE="${APP_IMAGE}"
+
     }
 
     stages {
@@ -38,16 +38,58 @@ pipeline {
             agent { label 'insights' }
             steps {
                 script {
-                    sh '''
-                        env
-                    '''
+                    GIT_COMMIT_HASH = ghprbActualCommit.take(6)
                 }
-
+                
                 checkout scmGit(
                     branches: [[name: '$ghprbSourceBranch']],
                     userRemoteConfigs: [[url: '$ghprbAuthorRepoGitUrl']])
-            }
 
+                stash(name: 'project-files', includes: "**")
+            }
+        }
+
+        stage('Lint') {
+            agent { label 'insights' }
+            environment {
+                TEST_CONT="${APP_NAME}-lint-${GIT_COMMIT_HASH}"
+            }
+            when {
+                expression {
+                    return (RUN_LINT_FLAG == 'true')
+                }
+            }
+            steps {
+                unstash 'project-files'
+
+                script {
+                    withVault([configuration: configuration, vaultSecrets: secrets]) {
+                        sh './frontends/lint.sh'
+                    }
+                }
+            }
+        }
+
+        stage('Frontend Build') {
+            agent { label 'insights' }
+            environment {
+                COMMON_BUILDER="https://raw.githubusercontent.com/RedHatInsights/insights-frontend-builder-common/master"
+                TEST_CONT="${APP_NAME}-frontend-build-${GIT_COMMIT_HASH}"
+            }
+            when {
+                expression {
+                    return (RUN_FRONTEND_COMMON_BUILDER_FLAG == 'true')
+                }
+            }
+            steps {
+                dir("${WORKSPACE}") {
+                    unstash 'project-files'
+
+                    withVault([configuration: configuration, vaultSecrets: secrets]) {
+                        sh './frontends/frontend-build.sh'
+                    }
+                }
+            }
         }
 
         stage('Tests/Build for Frontends') {
@@ -55,8 +97,7 @@ pipeline {
                 stage('Unit Testing') {
                     agent { label 'insights' }
                     environment {
-                            IMG_TAG=sh(script: "git rev-parse --short=8 HEAD", returnStdout: true).trim()
-                            TEST_CONT="${PROJECT_NAME}-unit-tests-${IMG_TAG}"
+                        TEST_CONT="${APP_NAME}-unit-tests-${GIT_COMMIT_HASH}"
                     }
                     when {
                         expression {
@@ -64,33 +105,11 @@ pipeline {
                         }
                     }
                     steps {
-                        script {
-                            withVault([configuration: configuration, vaultSecrets: secrets]) {
-                                sh '''
-                                    ./examples/frontends-pipeline-pr-checks/unit_tests.sh
-                                '''
-                            }
-                        }
-                    }
-                }
+                        unstash 'project-files'
 
-                stage('Lint') {
-                    agent { label 'insights' }
-                    environment {
-                        IMG_TAG=sh(script: "git rev-parse --short=8 HEAD", returnStdout: true).trim()
-                        TEST_CONT="${PROJECT_NAME}-lint-${IMG_TAG}"
-                    }
-                    when {
-                        expression {
-                            return (RUN_LINT_FLAG == 'true')
-                        }
-                    }
-                    steps {
                         script {
                             withVault([configuration: configuration, vaultSecrets: secrets]) {
-                                sh '''
-                                    ./examples/frontends-pipeline-pr-checks/lint.sh
-                                '''
+                                sh './frontends/unit_tests.sh'
                             }
                         }
                     }
@@ -99,8 +118,7 @@ pipeline {
                 stage('Cypress Component Testing') {
                     agent { label 'insights' }
                     environment {
-                        IMG_TAG=sh(script: "git rev-parse --short=8 HEAD", returnStdout: true).trim()
-                        TEST_CONT="${PROJECT_NAME}-cypress-component-tests-${IMG_TAG}"
+                        TEST_CONT="${APP_NAME}-cypress-component-tests-${GIT_COMMIT_HASH}"
                     }
                     when {
                         expression {
@@ -108,11 +126,11 @@ pipeline {
                         }
                     }
                     steps {
+                        unstash 'project-files'
+
                         script {
                             withVault([configuration: configuration, vaultSecrets: secrets]) {
-                                sh '''
-                                    ./examples/frontends-pipeline-pr-checks/cypress_component_tests.sh
-                                '''
+                                sh './frontends/cypress_component_tests.sh'
                             }
                         }
                     }
@@ -121,11 +139,8 @@ pipeline {
                 stage('Cypress E2E Tests') {
                     agent { label 'insights' }
                     environment {
-                        IMG_TAG=sh(script: "git rev-parse --short=8 HEAD", returnStdout: true).trim()
-                        TEST_CONT="${PROJECT_NAME}-cypress-e2e-tests-${IMG_TAG}"
+                        TEST_CONT="${APP_NAME}-cypress-e2e-tests-${GIT_COMMIT_HASH}"
 
-                        COMPONENT="insights-chrome-frontend"
-                        IMAGE="quay.io/cloudservices/${COMPONENT}"
                         INCLUDE_CHROME_CONFIG="true"
                     }
                     when {
@@ -134,11 +149,11 @@ pipeline {
                         }
                     }
                     steps {
+                        unstash 'project-files'
+
                         script {
                             withVault([configuration: configuration, vaultSecrets: secrets]) {
-                                sh '''
-                                    ./examples/frontends-pipeline-pr-checks/cypress_e2e_tests.sh
-                                '''
+                                sh './frontends/cypress_e2e_tests.sh'
                             }
                         }
                     }
@@ -147,31 +162,13 @@ pipeline {
                 stage('IQE Tests') {
                     agent { label 'insights' }
                     environment {
-                        IMG_TAG=sh(script: "git rev-parse --short=8 HEAD", returnStdout: true).trim()
-                        TEST_CONT="${PROJECT_NAME}-cypress-e2e-tests-${IMG_TAG}"
+                        TEST_CONT="${APP_NAME}-cypress-e2e-tests-${GIT_COMMIT_HASH}"
 
                         // Deploy to an ephemeral namespace for testing
-                        IMAGE="quay.io/cloudservices/rbac"
-                        GIT_COMMIT="master"
-                        IMAGE_TAG="latest"
+                        GIT_COMMIT_HASH="$ghprbActualCommit"
                         DEPLOY_FRONTENDS=true
-                        
-                        // Run tests with ClowdJobInvocation
-                        IQE_IMAGE_TAG="platform-ui"
-                        IQE_PLUGINS="platform_ui"
-                        IQE_MARKER_EXPRESSION="smoke"
-                        // xclude progressive profile tests
-                        // Exclude APIdocs tests
-                        IQE_FILTER_EXPRESSION="not (test_progressive or test_apidocs)"
-                        IQE_ENV="ephemeral"
-                        IQE_SELENIUM="true"
                         IQE_CJI_TIMEOUT="30m"
                         DEPLOY_TIMEOUT="900"  // 15min
-
-                        // Ensure that we deploy the right component for testing
-                        APP_NAME="rbac"
-                        COMPONENT="rbac"
-                        COMPONENT_NAME="rbac"
                     }
                     when {
                         expression {
@@ -179,10 +176,13 @@ pipeline {
                         }
                     }
                     steps {
+                        unstash 'project-files'
+
                         script {
                             withVault([configuration: configuration, vaultSecrets: secrets]) {
                                 sh '''
-                                    ./examples/frontends-pipeline-pr-checks/iqe_tests.sh
+                                    env
+                                    ./frontends/iqe_tests.sh
                                 '''
                             }
                         }
@@ -191,28 +191,6 @@ pipeline {
                         always {
                             archiveArtifacts artifacts: 'artifacts/**/*', fingerprint: true
                             junit skipPublishingChecks: true, testResults: 'artifacts/junit-*.xml'
-                        }
-                    }
-                }
-
-                stage('Frontend Build') {
-                    agent { label 'insights' }
-                    environment {
-                        COMMON_BUILDER="https://raw.githubusercontent.com/RedHatInsights/insights-frontend-builder-common/master"
-
-                        COMPONENT="insights-chrome-frontend"
-                        IMAGE="quay.io/cloudservices/${COMPONENT}"
-                    }
-                    when {
-                        expression {
-                            return (RUN_FRONTEND_BUILD_FLAG == 'true')
-                        }
-                    }
-                    steps {
-                        withVault([configuration: configuration, vaultSecrets: secrets]) {
-                            sh '''
-                                ./examples/frontends-pipeline-pr-checks/frontend-build.sh
-                            '''
                         }
                     }
                 }
